// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceBroadcastRecordingPip when rendering a paused recording should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody mx_VoiceBroadcastBody--pip"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        class="mx_AccessibleButton"
        role="button"
        tabindex="0"
      >
        <div
          data-testid="room-avatar"
        >
          room avatar: 
          My room
        </div>
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <div
            class="mx_VoiceBroadcastHeader_room_wrapper"
          >
            <div
              class="mx_VoiceBroadcastHeader_room"
            >
              My room
            </div>
          </div>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          <time
            class="mx_Clock"
            datetime="PT4H"
          >
            4h 0m 0s left
          </time>
        </div>
      </div>
      <div
        class="mx_LiveBadge mx_LiveBadge--grey"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        Live
      </div>
    </div>
    <hr
      class="mx_VoiceBroadcastBody_divider"
    />
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="resume voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl mx_VoiceBroadcastControl-recording"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_12"
        />
      </div>
      <div
        aria-label="Change input device"
        class="mx_AccessibleButton"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_16 mx_Icon_alert"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
          />
          <path
            d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
          />
        </svg>
      </div>
      <div
        aria-label="Stop Recording"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VoiceBroadcastRecordingPip when rendering a started recording should render as expected 1`] = `
<div>
  <div
    class="mx_VoiceBroadcastBody mx_VoiceBroadcastBody--pip"
  >
    <div
      class="mx_VoiceBroadcastHeader"
    >
      <div
        class="mx_AccessibleButton"
        role="button"
        tabindex="0"
      >
        <div
          data-testid="room-avatar"
        >
          room avatar: 
          My room
        </div>
      </div>
      <div
        class="mx_VoiceBroadcastHeader_content"
      >
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <div
            class="mx_VoiceBroadcastHeader_room_wrapper"
          >
            <div
              class="mx_VoiceBroadcastHeader_room"
            >
              My room
            </div>
          </div>
        </div>
        <div
          class="mx_VoiceBroadcastHeader_line"
        >
          <div
            class="mx_Icon mx_Icon_16"
          />
          <time
            class="mx_Clock"
            datetime="PT4H"
          >
            4h 0m 0s left
          </time>
        </div>
      </div>
      <div
        class="mx_LiveBadge"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
        Live
      </div>
    </div>
    <hr
      class="mx_VoiceBroadcastBody_divider"
    />
    <div
      class="mx_VoiceBroadcastBody_controls"
    >
      <div
        aria-label="pause voice broadcast"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_12"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 4a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Zm8 0a2 2 0 0 0-2 2v12a2 2 0 1 0 4 0V6a2 2 0 0 0-2-2Z"
          />
        </svg>
      </div>
      <div
        aria-label="Change input device"
        class="mx_AccessibleButton"
        role="button"
        tabindex="0"
      >
        <svg
          class="mx_Icon mx_Icon_16 mx_Icon_alert"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6a4 4 0 1 1 8 0v6a4 4 0 0 1-8 0V6Z"
          />
          <path
            d="M5 11a1 1 0 0 1 1 1 6 6 0 0 0 12 0 1 1 0 1 1 2 0 8.001 8.001 0 0 1-7 7.938V21a1 1 0 1 1-2 0v-1.062A8.001 8.001 0 0 1 4 12a1 1 0 0 1 1-1Z"
          />
        </svg>
      </div>
      <div
        aria-label="Stop Recording"
        class="mx_AccessibleButton mx_VoiceBroadcastControl"
        role="button"
        tabindex="0"
      >
        <div
          class="mx_Icon mx_Icon_16"
        />
      </div>
    </div>
  </div>
</div>
`;
